# Adagio

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qml.qrc
app/: adagio_pch.cpp  adagio_pch.h
app/Analysis/: AnalysisService.cpp  temp.h
app/Core/: Application.cpp  Application.h
app/IO/: AudioData.h  AudioFileHandler.cpp  AudioFileHandler.h  FileIOService.cpp  FileIOService.h  PlaybackService.cpp  PlaybackService.h
ui/components/BottomBar/: BottomBar.qml
ui/components/HeaderBar/: HeaderBar.qml
ui/components/Theme/: FontStyle.qml
ui/components/WaveformChart/: WaveformChart.qml
ui/controller/: MainUIController.cpp  MainUIController.h
